continuação da documentação
